# django-quantified-self

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
example/: Pipfile  README.md
example/example/: settings.py  urls.py
quantified_self/: __init__.py  admin.py  apps.py  mixins.py  models.py  urls.py  views.py
quantified_self/migrations/: 0001_initial.py  0002_auto_20191208_1429.py  0003_auto_20191208_1429.py
quantified_self/templates/quantified_self/: index.html  integer_count_detail.html  integer_count_list.html  interval_detail.html  interval_event_list.html  interval_list.html  overview.html
