[metadata]
name = django-quantified-self
version = 0.1
description = A Quantified Self Django application for collecting, storing, analysing and exporting your personal data.
long_description = file: README.rst
url = https://github.com/ggjersund/django-quantified-self
author = Gjert Ingar Gjersund
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
